vlib/v/parser/tests/variable_name_is_reserved.vv
fn main() {
	byte := 1
	println(byte)
}
